@@ -1,5 +1,6 @@
-TEvePadFrame *epf1 = 0;
-TEvePadFrame *epf2 = 0;
+// Demo / test of pad graphics in TGLViewer.
+
+TEvePadFrame *epf1 = 0, *epf2 = 0, *epf3 = 0, *epf4 = 0;
 
 void testgl1()
 {
@@ -20,14 +21,26 @@ void testgl1()
    }
    h->Draw();
 
-   epf1 = new TEvePadFrame(gPad, "Foo");
-   epf1->RefMainTrans().MoveLF(1, -0.7);
+   epf1 = new TEvePadFrame(gPad, "Pad 3D");
+   epf1->RefMainTrans().Move3LF(-0.7, 0.5, 0);
    gEve->AddElement(epf1);
 
-   epf2 = new TEvePadFrame(gPad, "Foo");
+   epf2 = new TEvePadFrame(gPad, "Pad FBO");
    epf2->SetUseFBO(kTRUE);
-   epf2->RefMainTrans().MoveLF(1, 0.7);
+   epf2->RefMainTrans().Move3LF(0.7, 0.5, 0);
    gEve->AddElement(epf2);
+
+   epf3 = new TEvePadFrame(gPad, "Pad FBO Mipmap");
+   epf3->SetUseFBO(kTRUE);
+   epf3->SetUseMipmaps(kTRUE);
+   epf3->RefMainTrans().Move3LF(-0.7, -0.5, 0);
+   gEve->AddElement(epf3);
+
+   epf4 = new TEvePadFrame(gPad, "Pad FBO LargeBuf");
+   epf4->SetUseFBO(kTRUE);
+   epf4->SetSizeFBO(2048);
+   epf4->RefMainTrans().Move3LF(0.7, -0.5, 0);
+   gEve->AddElement(epf4);
 
    gEve->Redraw3D(kTRUE);
 }
